--- a/мемы бравл старс.html
+++ b/мемы бравл старс.html
@@ -47,21 +47,21 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/%D1%84%D0%B0%D0%B9%D0%BB%202.html">ПРО А4 </a></p>
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/%D1%84%D0%B0%D0%B9%D0%BB%202.html">ПРО А4 </a></p>
+                <p><a href="файл2.html">ПРО А4 </a></p>
+                <p><a href="файл2.html">ПРО А4 </a></p>
 
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/HTMLPage1.html">МЕМАСИКИ!</a></p>
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/HTMLPage1.html">МЕМАСИКИ!</a></p>
+                <p><a href="HTMLPage1.html">МЕМАСИКИ!</a></p>
+                <p><a href="HTMLPage1.html">МЕМАСИКИ!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="ссылка">БОЛЬШЕ МЕМОВ!</a></p>
-                <p><a href="ссылка">БОЛЬШЕ МЕМОВ!</a></p>
+                <p><a href="index.html">КЛИКБЕЙТ!</a></p>
+                <p><a href="index.html">КЛИКБЕЙТ!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="ссылка">БОЛЬШЕ МЕМОВ!</a></p>
-                <p><a href="ссылка">БОЛЬШЕ МЕМОВ!</a></p>
+                <p><a href="мемы бравл старс.html">БОЛЬШЕ МЕМОВ!</a></p>
+                <p><a href="мемы бравл старс.html">БОЛЬШЕ МЕМОВ!</a></p>
             </div>
         </div>
     </div>
