--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -56,8 +56,8 @@
                 <p><a href="мемы бравл старс.html">БОЛЬШЕ МЕМОВ!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-12-md-6 col-lg-3 col-xl-3">
-                <p><a href="файл 2.html">ПРО А4 </a></p>
-                <p><a href="файл 2.html">ПРО А4 </a></p>
+                <p><a href="файл_2.html">ПРО А4 </a></p>
+                <p><a href="файл_2.html">ПРО А4 </a></p>
             </div>
             <div class="col-12 col-sm-12 col-12-md-6 col-lg-3 col-xl-3">
                 <p><a href="index.html">КЛИКБЕЙТ!</a></p>
