--- a/мемы бравл старс.html
+++ b/мемы бравл старс.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>МЕМЫ БРАВЛ СТАРС!<h1>
+                <h1>МЕМЫ БРАВЛ СТАРС!</h1>
             </div>
         </div>
     </div>
@@ -47,8 +47,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="файл 2.html">ПРО А4 </a></p>
-                <p><a href="файл 2.html">ПРО А4 </a></p>
+                <p><a href="файл_2.html">ПРО А4 </a></p>
+                <p><a href="файл_2.html">ПРО А4 </a></p>
 
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
