--- a/файл_2.html
+++ b/файл_2.html
@@ -47,16 +47,16 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/HTMLPage1.html">МЕМАСИКИ!</a></p>
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/HTMLPage1.html">МЕМАСИКИ!</a></p>
+                <p><a href="HTMLPage1.html">МЕМАСИКИ!</a></p>
+                <p><a href="HTMLPage1.html">МЕМАСИКИ!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/%D0%BC%D0%B5%D0%BC%D1%8B%20%D0%B1%D1%80%D0%B0%D0%B2%D0%BB%20%D1%81%D1%82%D0%B0%D1%80%D1%81.html">МЕМЫ БРАВЛ СТАРС!</a></p>
-                <p><a href="file:///D:/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B5%D0%B2%20%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB/%D0%BC%D0%B5%D0%BC%D1%8B%20%D0%B1%D1%80%D0%B0%D0%B2%D0%BB%20%D1%81%D1%82%D0%B0%D1%80%D1%81.html">МЕМЫ БРАВЛ СТАРС!</a></p>
+                <p><a href="мемы бравл старс.html">МЕМЫ БРАВЛ СТАРС!</a></p>
+                <p><a href="мемы бравл старс.html">МЕМЫ БРАВЛ СТАРС!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="ссылка">БОЛЬШЕ ПРО А4!</a></p>
-                <p><a href="ссылка">БОЛЬШЕ ПРО А4!</a></p>
+                <p><a href="файл_2.html">ПРО А4 </a></p>
+                <p><a href="файл_2.html">ПРО А4 </a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <p><a href="ссылка">БОЛЬШЕ ПРО А4!</a></p>
