--- a/мемы_бравл_старс.html
+++ b/мемы_бравл_старс.html
@@ -60,8 +60,8 @@
                 <p><a href="index.html">КЛИКБЕЙТ!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="мемы бравл старс.html">БОЛЬШЕ МЕМОВ!</a></p>
-                <p><a href="мемы бравл старс.html">БОЛЬШЕ МЕМОВ!</a></p>
+                <p><a href="мемы_бравл_старс.html">БОЛЬШЕ МЕМОВ!</a></p>
+                <p><a href="мемы_бравл_старс.html">БОЛЬШЕ МЕМОВ!</a></p>
             </div>
         </div>
     </div>
