--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -52,8 +52,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-12-md-6 col-lg-3 col-xl-3">
-                <p><a href="мемы бравл старс.html">БОЛЬШЕ МЕМОВ!</a></p>
-                <p><a href="мемы бравл старс.html">БОЛЬШЕ МЕМОВ!</a></p>
+                <p><a href="мемы_бравл_старс.html">БОЛЬШЕ МЕМОВ!</a></p>
+                <p><a href="мемы_бравл_старс.html">БОЛЬШЕ МЕМОВ!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-12-md-6 col-lg-3 col-xl-3">
                 <p><a href="файл_2.html">ПРО А4 </a></p>
