--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <p><a href="HTMLPage1.html">МЕМАСИКИ!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <p><a href="мемы бравл старс.html">МЕМЫ БРАВЛ СТАРС!</a></p>
-                <p><a href="мемы бравл старс.html">МЕМЫ БРАВЛ СТАРС!</a></p>
+                <p><a href="мемы_бравл_старс.html">МЕМЫ БРАВЛ СТАРС!</a></p>
+                <p><a href="мемы_бравл_старс.html">МЕМЫ БРАВЛ СТАРС!</a></p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <p><a href="ссылка">БОЛЬШЕ МЕМОВ!</a></p>
